--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
+    "start": "tsx index.ts",
+    "deploycmds": "tsx deploycmds.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "discord.js": "^14.21.0"
+    "discord.js": "^14.21.0",
+    "dotenv": "^17.0.1",
+    "mongodb": "^6.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
