--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "agenda": "^5.0.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
     "mongodb": "^6.17.0"
